plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'maven-publish'
    id "com.modrinth.minotaur" version "2.+"
    id "com.matthewprenger.cursegradle" version "1.4.0"
}

java.sourceCompatibility = JavaVersion.VERSION_25
java.targetCompatibility = JavaVersion.VERSION_25

base.archivesName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
    maven { url "https://maven.shedaniel.me" }
    maven { url "https://maven.bai.lol" }
    maven { url 'https://maven.terraformersmc.com/releases' }
    maven { url 'https://jitpack.io' }
    maven { url 'https://maven.ambertation.de/releases' }
    flatDir { dirs 'libs' }
}

fabricApi {
    configureDataGeneration() {
        client = true
    }
}

loom {
    accessWidenerPath = file("src/main/resources/wunderreich.accesswidener")
}

def local_wunderlib = findProject(':wunderlib') != null

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    compileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}" // compile against the API
    compileOnly "me.shedaniel.cloth:basic-math:0.6.1" // me.shedaniel.math.Point/Rectangle used by the REI GUI API
    compileOnly "dev.architectury:architectury-fabric:20.0.6" // dev.architectury.fluid.FluidStack referenced by REI EntryStacks/EntryIngredients overloads
    localRuntime "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}" // run against the full jar (pulls basic-math transitively)

    compileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
    localRuntime "com.terraformersmc:modmenu:${project.modmenu_version}"

    compileOnly "mcp.mobius.waila:wthit-api:fabric-${project.wthit_version}" // compile against the API
    localRuntime "mcp.mobius.waila:wthit:fabric-${project.wthit_version}" // run against the full jar

//    compileOnly "dev.emi:emi-fabric:${emi_version}:api"
//    localRuntime "dev.emi:emi-fabric:${emi_version}"

    println "Using local WunderLib: ${local_wunderlib}"
    if (local_wunderlib) {
        implementation project(path: ":wunderlib", configuration: 'dev')
        include project(path: ":wunderlib")
    } else {
        api "de.ambertation:wunderlib:${project.wunderlib_version}"
        include "de.ambertation:wunderlib:${project.wunderlib_version}"
    }
}
//
//// Force Loom to remap the local project
afterEvaluate {
    if (local_wunderlib) {
        tasks.named("jar").configure {
            dependsOn ":wunderlib:jar"
        }
    }
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    it.options.release = 25
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archives_base_name}" }
    }
}

apply from: "helper.gradle"

allprojects {
    // Allow 400 errors.
    gradle.projectsEvaluated {
        tasks.withType(JavaCompile) {
            options.compilerArgs << "-Xmaxerrs" << "5000"
            //<< "-Xlint:rawtypes"
            //<< "-Xlint:unchecked"
            //<< "-Xlint:deprecation"
        }
    }
}
